# kegerator-display

./: Cargo.toml  Dockerfile  Dockerfile.debian  docker-compose.yml
data/: tap.json
src/: main.rs
static/: homebrew.css  tap.css
templates/: index.html
