[package]
name = "kegerator-display"
version = "0.1.0"
edition = "2018"


[dependencies]
axum = "0.5.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
json = "0.12"
chrono = {version = "0.4", features = ["serde"]}
askama = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
